fixed z-index and navbar

--- a/style.css
+++ b/style.css
@@ -166,16 +166,26 @@ body {
 .navbar {
     padding: 1em 5em;
     background-color: #372E4D;
+    position: relative;
+    z-index: 2;
 }
 
-li a {
+li .active {
     font-family: "Rethink Sans", sans-serif;
     font-weight: 400;
     font-size: 1em;
     letter-spacing: 1px;
     color: white;
+    padding: 18px;
+    border-radius: 2px;
     text-transform: uppercase;
     text-decoration: none;
+    transition: all 0.1s ease-in;
+}
+
+.active:hover {
+    background-color: #B084CC;
+    color: #372E4D;
 }
 
 .section-one {
